--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -6,6 +6,9 @@
 
 //<Подключаем шрифты>=======================================================================================
 //&display=swap&subset=cyrillic-ext
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,700);
+@import url(https://fonts.googleapis.com/css?family=DM+Serif+Display:regular);
+@import url(https://fonts.googleapis.com/css?family=Roboto:700);
 @import "fonts";
 //</Подключаем шрифты>=======================================================================================
 
@@ -14,15 +17,15 @@
 //</Иконочные шрифты>==========================================================================================
 
 //<Шрифт по умолчанию>==========================================================================================
-$fontFamily: "";
+$fontFamily: "Rubik";
 //</Шрифт по умолчанию>==========================================================================================
 
 //</ШРИФТЫ>=======================================================================================================
 
 //<ПЕРЕМЕННЫЕ>===========================================================================================================
 $minWidth: 320px;
-$maxWidth: 1920;
-$maxWidthContainer: 1170;
+$maxWidth: 1600;
+$maxWidthContainer: 1183;
 $md1: $maxWidthContainer + 12;
 $md2: 991.98;
 $md3: 767.98;
@@ -33,7 +36,7 @@ $md4: 479.98;
 @import "null";
 body {
 	color: #000;
-	font-size: 14px;
+	font-size: 16px;
 	&._lock {
 		overflow: hidden;
 	}
@@ -56,16 +59,6 @@ body {
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 auto;
-	@media (max-width: $md1+px) {
-		max-width: 970px;
-	}
-	@media (max-width: $md2+px) {
-		max-width: 750px;
-	}
-	@media (max-width: $md3+px) {
-		max-width: none;
-		padding: 0 10px;
-	}
 }
 //</ОСНОВНАЯ СЕТКА>===========================================================================================================
 
