--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -12,12 +12,14 @@ body {
 
 	&__content {
 		width: 100%;
+		height: 100px;
 		padding-top: 15px;
 		padding-bottom: 15px;
 		position: fixed;
+		z-index: 5;
 		margin-left: 50%;
 		transform: translate(-50%);
-		background-color: #FBCCBB;
+		//background-color: #F37962;
 		display: flex;
 		justify-content: space-between;
 		justify-items: center;
@@ -42,19 +44,13 @@ body {
 	// .header__btn
 
 	&__btn {
-		display: flex;
 		margin-right: 75px;
-		justify-content: center;
-		text-align: center;
-		padding: 20px 24px;
-
-		background-color: #EE4D47;
-		border-radius: 5px;
-
-		font-weight: bold;
-		line-height: 19px;
-		color: #FFFFFF;
-		white-space: nowrap;
+		@media (max-width:$md2+px){
+			margin-right: 35px;
+		}
+		@media (max-width:$md3+px){
+			 margin: 0;
+		}
 	}
 }
 
@@ -70,14 +66,51 @@ body {
 	&__body {
 		display: flex;
 		align-items: center;
+		@media (max-width:$md3+px){
+			display: none;
+		}
+		&._active {
+		@media (max-width: $md3+px) {
+			display: flex;
+			flex-direction: column;
+			position: fixed;
+			height: 100vh;
+			width: 100vw;
+			top: 0;
+			left: 0;
+			z-index: 2;
+			background-color: rgba(61, 53, 53, 0.9);
+		}
+	}
 	}
 
 	// .menu__list
 
 	&__list {
 		display: flex;
+		@media (max-width:$md3+px){
+			flex-direction: column;
+			text-align: center;
+			margin-top: 25px;
+		}
 		li {
 			margin-right: 104px;
+			&:last-child {
+				margin-right: 75px;
+			}
+			@media (max-width:$md2+px){
+				margin-right: 35px;
+				&:last-child {
+					margin-right: 35px;
+				}
+			}
+			@media (max-width:$md3+px){
+
+				 margin: 25px 0;
+				 &:last-child {
+					margin-right: 0;
+				}
+			}
 			a{
 			font-weight: bold;
 			font-size: 16px;
@@ -86,10 +119,13 @@ body {
 			text-transform: uppercase;
 			color: #FFFFFF;
 			white-space: nowrap;
-	  	}
-			&:last-child {
-				margin-right: 75px;
+			&:hover {
+				color: #F06252;
 			}
+			@media (max-width:$md3+px){
+				 font-size: 25px;
+			}
+	    	}
 		}
 	}
 
@@ -99,16 +135,92 @@ body {
 	}
 }
 .icon-menu {
+	&._active {
+		span {
+			background-color: #fff;
+		}
+	}
 }
 
-//Burger
+
+.promo {
+	//background: url("../img/header-scene.svg");
+
+	&__bg-img {
+		img{
+			position:absolute;
+			top: -100px;
+			left: -10%;
+			//width: 120%;
+		}
+	}
+
+	&__bg-track-img {
+		position: absolute;
+		left: -30%;
+		top: 650px;
+		@media (max-width:$md3+px){
+			 left: -60%;
+		}
+		@media (max-width:$md4+px){
+			left: -150%;
+		}
+	}
+	// .promo__content
+
+	&__content {
+		padding-top: 100px;
+		position:relative;
+
+	}
+
+	// .promo__title
+
+	&__title {
+		position: relative;
+		margin-top: 50px;
+		margin-left: 15px;
+		max-width: 740px;
+		text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+
+		font-family: DM Serif Display;
+		font-size: 100px;
+		line-height: 100%;
+		color: #FFFFFF;
+		@media (max-width:$md2+px){
+			font-size: 80px;
+			max-width: 570px;
+		}
+		@media (max-width:600px){
+			font-size: 40px;
+			max-width: 400px;
+		}
+	}
+
+	&__btn {
+		position: relative;
+		margin-top: 60px;
+		margin-left: 45px;
+	}
+}
+
+
+.btn {
+
+	// .btn_arrow
+
+	&_arrow {
+	}
+}
+//Burger========================================================================================================================================================
+
 .icon-menu {
 	display: none;
 	@media (max-width: $md3+px) {
 		display: block;
 		position: absolute;
-		top: 18px;
-		right: 10px;
+		top: 40px;
+		right: 20px;
 		width: 30px;
 		height: 18px;
 		cursor: pointer;
@@ -144,6 +256,9 @@ body {
 		}
 	}
 }
+//</burger>========================================================================================================================================================
+
+
 
 /*
 //Burger
