--- a/Traffico-Landingpage/css/style.css
+++ b/Traffico-Landingpage/css/style.css
@@ -128,7 +128,18 @@ body._lock {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  padding: 0px 0px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  padding: 20px 24px;
+  background-color: #EE4D47;
+  border-radius: 5px;
+  font-weight: bold;
+  line-height: 19px;
+  color: #FFFFFF;
+  white-space: nowrap;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .btn._fw {
@@ -862,14 +873,15 @@ body {
 
 .header__content {
   width: 100%;
+  height: 100px;
   padding-top: 15px;
   padding-bottom: 15px;
   position: fixed;
+  z-index: 5;
   margin-left: 50%;
   -webkit-transform: translate(-50%);
       -ms-transform: translate(-50%);
           transform: translate(-50%);
-  background-color: #FBCCBB;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -888,21 +900,7 @@ body {
 }
 
 .header__btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-right: 75px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  padding: 20px 24px;
-  background-color: #EE4D47;
-  border-radius: 5px;
-  font-weight: bold;
-  line-height: 19px;
-  color: #FFFFFF;
-  white-space: nowrap;
 }
 
 .menu__body {
@@ -924,6 +922,10 @@ body {
   margin-right: 104px;
 }
 
+.menu__list li:last-child {
+  margin-right: 75px;
+}
+
 .menu__list li a {
   font-weight: bold;
   font-size: 16px;
@@ -934,8 +936,47 @@ body {
   white-space: nowrap;
 }
 
-.menu__list li:last-child {
-  margin-right: 75px;
+.menu__list li a:hover {
+  color: #F06252;
+}
+
+.icon-menu._active span {
+  background-color: #fff;
+}
+
+.promo__bg-img img {
+  position: absolute;
+  top: -100px;
+  left: -10%;
+}
+
+.promo__bg-track-img {
+  position: absolute;
+  left: -30%;
+  top: 650px;
+}
+
+.promo__content {
+  padding-top: 100px;
+  position: relative;
+}
+
+.promo__title {
+  position: relative;
+  margin-top: 50px;
+  margin-left: 15px;
+  max-width: 740px;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  font-family: DM Serif Display;
+  font-size: 100px;
+  line-height: 100%;
+  color: #FFFFFF;
+}
+
+.promo__btn {
+  position: relative;
+  margin-top: 60px;
+  margin-left: 45px;
 }
 
 .icon-menu {
@@ -1002,6 +1043,11 @@ body {
 }
 
 @media (min-width: 992px) {
+  .btn:hover {
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
+
   .select__option:hover {
     background: #d9d9d9;
   }
@@ -1019,14 +1065,81 @@ body {
   .select__options {
     font-size: 18px;
   }
+
+  .header__btn {
+    margin-right: 35px;
+  }
+
+  .menu__list li {
+    margin-right: 35px;
+  }
+
+  .menu__list li:last-child {
+    margin-right: 35px;
+  }
+
+  .promo__title {
+    font-size: 80px;
+    max-width: 570px;
+  }
 }
 
 @media (max-width: 767.98px) {
+  .header__btn {
+    margin: 0;
+  }
+
+  .menu__body {
+    display: none;
+  }
+
+  .menu__body._active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgba(61, 53, 53, 0.9);
+  }
+
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin-top: 25px;
+  }
+
+  .menu__list li {
+    margin: 25px 0;
+  }
+
+  .menu__list li:last-child {
+    margin-right: 0;
+  }
+
+  .menu__list li a {
+    font-size: 25px;
+  }
+
+  .promo__bg-track-img {
+    left: -60%;
+  }
+
   .icon-menu {
     display: block;
     position: absolute;
-    top: 18px;
-    right: 10px;
+    top: 40px;
+    right: 20px;
     width: 30px;
     height: 18px;
     cursor: pointer;
@@ -1072,5 +1185,18 @@ body {
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
     bottom: calc(50% - 1px);
+  }
+}
+
+@media (max-width: 600px) {
+  .promo__title {
+    font-size: 40px;
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 479.98px) {
+  .promo__bg-track-img {
+    left: -150%;
   }
 }
