--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -59,6 +59,7 @@ body {
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 auto;
+	padding: 0 15px;
 }
 //</ОСНОВНАЯ СЕТКА>===========================================================================================================
 
@@ -82,5 +83,12 @@ body {
 	flex: 1 1 auto;
 }
 //===================================================================================================================================
+
+.btn_arrow {
+	span {
+		padding-right: 45px;
+		background: no-repeat url("../img/right-arrow.svg") right;
+	}
+}
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
