--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -35,6 +35,7 @@ $md4: 479.98;
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
 @import "null";
 body {
+	background-color: #FEF8F5;
 	color: #000;
 	font-size: 16px;
 	&._lock {
@@ -91,4 +92,7 @@ body {
 	}
 }
 
+img {
+	max-width: 100%;
+}
 //</ОСНОВНОЙ БЛОК>====================================================================================================
