--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,4 +1,198 @@
-footer{}
+
+
+
+.footer {
+    margin-top: 100px;
+
+    &__bg {
+        position: absolute;
+        top: 0;
+        left: -240px;
+        z-index: -1;
+        max-width: initial;
+    }
+
+    // .footer__content
+
+    &__content {
+        position: relative;
+        padding-top: 50px;
+    }
+
+    // .footer__row
+
+    &__row_1 {
+        display: flex;
+        @media (max-width:$md3+px){
+             flex-wrap: wrap;
+             text-align: center;
+        }
+    }
+
+    &__row_2 {
+        padding-top: 170px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+       @media (max-width:$md3+px){
+        padding-top: 30px;
+        padding-bottom: 40px;
+        flex-wrap: wrap;
+        text-align: center;
+
+        background-color: #0F264C;
+        margin-right: -20px;
+        margin-left: -20px;
+    }
+    }
+    // .footer__p
+
+    &__p {
+        width: 40%;
+        margin-top: 240px;
+        max-width: 330px;
+        padding-left: 20px;
+        border-left: 5px solid #ED4D47;
+        border-radius: 5px 0 0 5px;
+
+        font-size: 20px;
+        line-height: 30px;
+        color: #FFFFFF;
+        @media (max-width:$md3+px){
+            margin-top: 200px;
+            max-width: initial;
+            margin-left: 30px;
+            margin-right: 30px;
+             width: 100%;
+             margin-bottom: 50px;
+
+        }
+    }
+
+    // .footer__form
+
+    &__form {
+        width: 60%;
+        background-color: #fff;
+        margin-left: 30px;
+        padding: 50px 75px;
+        border-radius: 10px;
+        @media (max-width:$md3+px){
+             width: 100%;
+             padding: 20px 30px;
+        }
+    }
+
+    // .footer__logo
+
+    &__logo {
+        margin-right: 20px;
+        @media (max-width:$md3+px){
+            margin-right: 0;
+             width: 100%;
+        }
+    }
+
+    // .footer__nav
+
+    &__nav {
+        display: flex;
+        margin-right: 40px;
+        @media (max-width:$md2+px){
+            margin-right: 0;
+        }
+
+        @media (max-width:$md3+px){
+            margin-top: 20px;
+            margin-right: 0;
+            width: 100%;
+            margin-left: 50%;
+            transform: translate(-50%);
+            justify-content: center;
+        }
+
+         li {
+            margin-right: 90px;
+
+            line-height: 19px;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            white-space: nowrap;
+
+            @media (max-width:$md2+px){
+                margin-right: 60px;
+            }
+            @media (max-width:$md3+px){
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+         }
+    }
+
+    // .footer__socials
+
+    &__socials {
+    }
+
+    // .footer__copyright
+
+    &__copyright {
+    }
+}
+
+.form-footer {
+
+    // .form-footer__line
+
+    &__line {
+        margin-bottom: 30px;
+    }
+
+    // .form-footer__label
+
+    &__label {
+        margin-bottom: 10px;
+
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 40px;
+        color: #402B2B;
+    }
+
+    // .form-footer__btn
+
+    &__btn {
+    }
+}
+.form {
+}
+.input {
+
+    &_1 {
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 40px;
+        color: #402B2B;
+    }
+
+    &_2 {
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 40px;
+        color: #402B2B;
+    }
+}
+.btn {
+
+    // .btn_arrow
+
+    &_arrow {
+    }
+}
+
 //====================================================================================================
 
 //====================================================================================================
