--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -147,11 +147,17 @@ textarea {
 .input {
 	border-radius: 0 !important;
 	width: 100%;
+	height: 60px;
 	display: block;
 	padding: 0px 20px;
+	border-radius: 5px;
+	border: 1px solid rgba(#EE4D47, 0.5);
 	&._focus {
+		border: 1px solid #EE4D47;
+		box-shadow: 0px 20px 40px rgba(238, 77, 71, 0.2);
 	}
 	&._error {
+
 	}
 }
 textarea.input {
