--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -170,6 +170,10 @@
         margin-top: 150px;
         padding-top: 100px;
         padding-bottom: 100px;
+        @media (max-width:$md2+px){
+             margin-top: 50px;
+             padding-top: 0;
+        }
 
         &::before {
             position: absolute;
@@ -191,6 +195,7 @@
         display: flex;
         @media (max-width:$md2+px){
             flex-wrap: wrap;
+            justify-content: center;
             text-align: center;
         }
     }
@@ -214,6 +219,9 @@
         line-height: 40px;
         letter-spacing: 0.1em;
         color: #EE4D47;
+        @media (max-width:$md2+px){
+             margin-top: 50px;
+        }
     }
 
     // .faq__p
@@ -224,8 +232,11 @@
         font-size: 48px;
         line-height: 140%;
         color: #402B2B;
+        @media (max-width:$md2+px){
+            font-size: 40px;
+        }
         @media (max-width:$md3+px){
-             font-size: 40px;
+             font-size: 30px;
         }
     }
 
@@ -234,7 +245,7 @@
     &__img {
         width: 60%;
         @media (max-width:$md2+px){
-            width: 100%;
+            width: 80%;
             margin-top: 50px;
         }
     }
@@ -451,5 +462,30 @@
         }
     }
 }
+
+.swiper-pagination-bullets {
+    text-align: center;
+    margin-top: 20px;
+    @media (min-width: $md3+px){
+        display: none;
+    }
+}
+
+.swiper-pagination-bullet {
+    display: inline-block;
+    background-color: rgb(20, 20, 20);
+    width: 16px;
+    height: 16px;
+    border-radius: 100%;
+
+    &:not(:last-child) {
+        margin-right: 7px;
+    }
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #f86c53;
+}
+
 
 //</reviews>========================================================================================================================================================
