--- a/Traffico-Landingpage/css/style.css
+++ b/Traffico-Landingpage/css/style.css
@@ -1484,6 +1484,27 @@ body.ie ._ibg img {
   background: no-repeat left url(../img/slide-1__photo.svg);
 }
 
+.swiper-pagination-bullets {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet {
+  display: inline-block;
+  background-color: #141414;
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+}
+
+.swiper-pagination-bullet:not(:last-child) {
+  margin-right: 7px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #f86c53;
+}
+
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -1497,6 +1518,12 @@ body.ie ._ibg img {
 
 img {
   max-width: 100%;
+}
+
+@media (min-width: 767.98px) {
+  .swiper-pagination-bullets {
+    display: none;
+  }
 }
 
 @media (min-width: 991.98px) {
@@ -1601,9 +1628,17 @@ img {
     width: 100%;
   }
 
+  .faq__content {
+    margin-top: 50px;
+    padding-top: 0;
+  }
+
   .faq__row {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
   }
 
@@ -1611,8 +1646,16 @@ img {
     width: 100%;
   }
 
+  .faq__title {
+    margin-top: 50px;
+  }
+
+  .faq__p {
+    font-size: 40px;
+  }
+
   .faq__img {
-    width: 100%;
+    width: 80%;
     margin-top: 50px;
   }
 
@@ -1792,7 +1835,7 @@ img {
   }
 
   .faq__p {
-    font-size: 40px;
+    font-size: 30px;
   }
 
   .reviews {
